# openai-cli

./: main.py  pyproject.toml
notebook/: example.py
